# pytest-tags

./: .gitignore  .pre-commit-config.yaml  README.md  pytest.ini  requirements-dev.txt  setup.cfg
.github/workflows/: tests.yaml
pytest_tags/: tagging.py
tests/: test_default.py  test_exclude.py
