[metadata]
name = pytest-tags
version = 0.1.0
description = A pytest plugin for tagging tests with custom strings.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ioan-Andrei Nedelcu
author_email = nedelcu.ioan.andrei@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython,
    Development Status :: 4 - Beta
    Intended Audience :: Developers

[options]
packages = find:
install_requires =
    pytest>=6.0
python_requires = >=3.12

[options.entry_points]
pytest11 =
    tags = pytest_tags.tagging

